--- a/app/src/main/res/layout/activity_drug_diary.xml
+++ b/app/src/main/res/layout/activity_drug_diary.xml
@@ -25,6 +25,7 @@
         android:layout_marginBottom="10dp"/>
 
     <EditText
+        android:id="@+id/txt_Detonating_drug_diary"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:inputType="textImeMultiLine"
@@ -39,6 +40,7 @@
         android:layout_marginBottom="10dp"/>
 
     <EditText
+        android:id="@+id/txt_Result_drug_diary"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:inputType="textImeMultiLine"
@@ -48,6 +50,7 @@
         android:layout_marginBottom="10dp"/>
 
     <Button
+        android:id="@+id/btnSaveDrugDiary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btnSave"
