--- a/app/src/main/res/layout/activity_drug_diary_counter.xml
+++ b/app/src/main/res/layout/activity_drug_diary_counter.xml
@@ -13,6 +13,14 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:text="@string/lbl_help_drug_counter"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
